积累的更新，适配JDER V1.7-B1