@@ -27,14 +27,14 @@ tasks.withType(JavaCompile){
   sourceCompatibility = 8
   targetCompatibility = 8
 
-  options.fork = true
+  options.fork = true;
   options.forkOptions.jvmArgs.addAll([
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-          "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
   ])
 }
 
