@@ -8,14 +8,14 @@ plugins {
 }
 
 ext{
-  uncVersion = '1.8.2'
+  uncVersion = '1.8.3'
 
   //the build number that this mod is made for
   mindustryVersion = 'v145'
   //version of SDK you will be using
   minSdkAPI = 30
   //version of JavaDynamilizer
-  JDERVersion = 'V1.7-A1'
+  JDERVersion = 'V1.7-B1'
   sdkRoot = System.getenv("ANDROID_HOME")
 }
 
@@ -27,16 +27,6 @@ configure(allprojects - project(":annotations")){
 
   tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
-
-    options.fork = true
-    options.forkOptions.jvmArgs.addAll([
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    ])
   }
 
   tasks.withType(Jar){
